...
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
    </string-array>
    <string name="BuzzerScreen_player_missing">Please enter a name for every player.</string>
    <string name="BuzzerScreen_ok">OK</string>

    <!-- GameEnding -->
    <string name="gameEnding_unconnectedUsername">UNCONNECTED</string>


    <!-- GameGenre -->
...

    <!-- Profile -->
    <string name="profile_verify_change_profile_pic">Do you want to change your profile picture?</string>
    <string name="profile_logout">logout</string>
    <string name="profile_scores">Scores</string>
    <string name="profile_following">Following</string>
    <string name="test_profile_image">bit.ly/3IUnyAF</string>
    <string name="profile_username">Profile Username</string>
    <string name="profile_my_music">My Music</string>

    <!-- ScoreBoard -->
    <string name="scoreboard">S C O R E B O A R D</string>

...
